# nbbot1

./: .env.prod  README.md  pyproject.toml
accounts/2896529248/: config.yml  device.json  session.token
accounts/2896529248/data/images/: 000079.ldb  000082.ldb  LOG  MANIFEST-000081
accounts/2896529248/data/leveldb-v3/: 000072.ldb  000073.ldb  000077.ldb  000078.ldb  LOG  MANIFEST-000080
accounts/2896529248/data/videos/: LOG
accounts/binary/: accounts.pkl
data/: lolicon.db  setu_config.json
