[project]
name = "nbbot1"
version = "0.1.0"
description = "nbbot1"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_setu", "nonebot_plugin_status", "nonebot_plugin_setu_customization", "nonebot_plugin_setu_collection"]
plugin_dirs = []
builtin_plugins = ["echo"]
